Finished the set up of grid layout

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -36,5 +36,19 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content 40vh repeat(3, min-content);
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  // 1140 / 8 = 140rem
+  /*
+    sidebar-space,
+    1fr to occupy the left remaining space or minmax(6rem, 1fr)
+    repeat 8 times for each section,
+    1fr to occupying the right remaining space or minmax(6rem, 1fr)
+  */
+  //grid-template-columns: 8rem 1fr repeat(8, minmax(min-content, 14rem)) 1fr;
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end] ) [center-end] minmax(6rem, 1fr) [full-end];
+
+  & > * {
+    padding: 40px;
+    font-size: 3rem;
+  }
 }
