--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,11 +2,33 @@
   &__pictures {
     background-color: $color-primary;
 
-    grid-column: full-start / col-end 4 ;
+    grid-column: full-start / col-end 4;
   }
 
   &__content {
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
+
+    padding: 5rem 8vw;
+
+    /*
+    Using flexbox
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    */
+
+    display: grid;
+    align-content: center;
+    justify-items: start;
+
+  }
+
+  &__text {
+    font-size: 1.5rem;
+    font-style: italic;
+    padding-bottom: 4rem;
   }
 }
