--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -49,6 +49,7 @@
     background-color: $color-secondary;
     color: #ffffff;
     font-weight: 400;
+    cursor: default;
   }
 
   &__location,
@@ -74,7 +75,6 @@
     }
 
     p {
-
     }
   }
 
