--- a/css/style.css
+++ b/css/style.css
@@ -194,8 +194,7 @@ body {
     padding: 1.25rem;
     background-color: #101d2c;
     color: #ffffff;
-    font-weight: 400;
-    cursor: default; }
+    font-weight: 400; }
   .home__location, .home__rooms {
     margin-top: 2.5rem; }
   .home__location, .home__rooms, .home__area, .home__price {
