--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -49,7 +49,7 @@
     background-color: $color-secondary;
     color: #ffffff;
     font-weight: 400;
-    //cursor: default;
+    cursor: default;
   }
 
   &__location,
