--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,8 +15,10 @@ $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
 // RESPONSIVE BREAKPOINTS
-$bp-largest: 75em;      // 1200/16 = 75
+$bp-largest: 75em;    // 1200/16 = 75
 $bp-large: 62.5em;    // 1000/16 = 62.5
+$bp-medium: 50em;     // 1000/16 = 50
+$bp-small: 37.5em;     // 600/16 = 50
 
 *,
 *::before,
@@ -64,5 +66,11 @@ body {
   @media only screen and (max-width: $bp-large) {
     grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
     grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end] ) [center-end] minmax(6rem, 1fr) [full-end];
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    // By default, min-content will be applied, then we can remove them
+    //grid-template-rows: 6rem calc(100vh - 6rem) min-content min-content 40vw repeat(3, min-content);
+    grid-template-rows: 6rem calc(100vh - 6rem);
   }
 }
